--- a/billetterie.html
+++ b/billetterie.html
@@ -36,12 +36,34 @@
         
         <h1>Festiv'Halloween</h1>
     </header>
-<h2>Billeterie</h2>
-<h4>Bienvenue sur la billetterie officielle du Festiv’Halloween !</h4>
-<h4>Que vous soyez amateur de frissons ou en quête de divertissements plus légers pour toute la famille, notre sélection de films saura satisfaire petits et grands. 
+<h2>Billeterie</h5>
+<h5>Bienvenue sur la billetterie officielle du Festiv’Halloween !</h4>
+<p>Que vous soyez amateur de frissons ou en quête de divertissements plus légers pour toute la famille, notre sélection de films saura satisfaire petits et grands. 
     Plongez dans l'esprit d'Halloween avec des projections effrayantes pour les adultes et des séances ludiques pour les enfants. 
-    Réservez dès maintenant vos places pour vivre une expérience cinématographique inoubliable !</h4>
+    Réservez dès maintenant vos places pour vivre une expérience cinématographique inoubliable !</p>
 <img src="/assets/img/Programmation/dague.svg" alt="Image d'une dague">
+
 <h4>Programme pour enfants</h4>
+<img src="/assets/img/Programmation/citrouilleEnfant.jpg" alt="Image chasse aux bonbons">
+<p>Du 30 octobre à 16h00 au 31 octobre à 00h30</p>
+<p>Place à 10 € pour l’accès à la programmation pour enfant. </p>
+<button class="btn">J'achète</button>
+
+<h4>Programme pour adultes</h4>
+<img src="/assets/img/Programmation/citrouilleAdulte.jpg" alt="Image d'une citrouille qui fait peur">
+<p>Du 29 octobre à 18h00 au 30 octobre à 5h30</p>
+<p>Place à 5 € pour étudiant(es), sinon à 10 € pour l’accès au festival complet (programmation pour enfant et adulte). </p>
+<button class="btn">J'achète</button>
+
+<footer>
+    <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+    <p>Mentions légales</p>
+    <p>Politique de confidentialité</p>
+    <img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+    <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+    <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+    <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+</footer>
+
 </body>
 </html>
