--- a/ProgrammeAdulte.html
+++ b/ProgrammeAdulte.html
@@ -47,5 +47,46 @@
 <h1>Oserez-vous relever le défi ?</h1>
 <h4>Notre sélection</h4>
 <p>29 octobre  à partir de 18h00 jusqu’au 30 octobre à 5h30</p>
+
+<img src="/assets/img/Film/filmshinning.jpg" alt="Film Shinning">
+<p>Shinning, de Stanley Kubrick</p>
+<p>Début : 18h00</p>
+<p>Durée : 2h26</p>
+
+<img src="/assets/img/Film/filmanimaltronix.webp" alt="Film Five Nights at Freddy's">
+<p>Five Nights at Freddy's, de Emma Tammi</p>
+<p>Début : 20h30</p>
+<p>Durée : 1h50</p>
+
+<img src="/assets/img/Film/filmfreddy.webp" alt="Film Les Griffes de la nuit">
+<p>Les Griffes de la nuit, de Wes Craven</p>
+<p>Début : 22h10</p>
+<p>Durée : 1h30</p>
+
+<img src="/assets/img/Film/Filmconjuring.svg" alt="Film Conjuring, les dossiers Warren">
+<p>SConjuring, les dossiers Warren, de James Wan</p>
+<p>Début : 23h40</p>
+<p>Durée : 1h52</p>
+
+<img src="/assets/img/Film/filmpalaisdurire.jpg" alt="Film Massacre au palais du rire">
+<p>Massacre au palais du rire, de Andy Palmer</p>
+<p>Début : 1h30</p>
+<p>Durée : 1h30</p>
+
+<img src="/assets/img/Film/filmça.webp" alt="Film Ça">
+<p>Ça, de Andy Muschietti</p>
+<p>Début : 3h00</p>
+<p>Durée : 2h12</p>
+
+<footer>
+    <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+    <p>Mentions légales</p>
+    <p>Politique de confidentialité</p>
+    <img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+    <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+    <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+    <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+</footer>
+
 </body>
 </html>
