Film casper HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
     <header>
+      <a href="index.html">
         <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+      </a>
         <img src="/assets/icons/menu.svg" alt="menu-btn">
         <nav class="headermenu menu" id="mainNav" aria-hidden="true">
             <ul class="menulist list-unstyled">
@@ -55,19 +57,25 @@
     vivre des moments inoubliables en famille ou entre amis dans une ambiance ensorcelante !</p>
 
 <h3>Billetterie</h3>
-<img src="/assets/icons/fantom.svg" alt="Bouton Billetterie">
+<a href="billetterie.html">
+  <img src="/assets/icons/fantom.svg" alt="Bouton Billetterie">
+</a>
 <p>Préparez-vous pour des frissons et du fun ! Que vous soyez amateur de films effrayants ou de contes d'Halloween 
     pour toute la famille, notre festival vous promet des moments inoubliables. Réservez vite vos places pour ne rien 
     manquer – cliquez sur le fantôme !</p>
 
 <h3>Programmation pour adultes</h3>
-<img src="/assets/icons/crane.svg" alt="Bouton programmation pour adultes">
+<a href="ProgrammeAdulte.html">
+  <img src="/assets/icons/crane.svg" alt="Bouton programmation pour adultes">
+</a>
 <p>Plongez dans l'univers sombre et captivant de notre programmation spéciale Halloween pour adultes. Frissons garantis 
     avec une sélection de films effrayants qui vous tiendront en haleine toute la nuit. Osez cliquer sur le crâne pour 
     découvrir ce qui vous attend... si vous n'avez pas peur !</p>
 
 <h3>Programmation pour enfants</h3>
-<img src="/assets/icons/chauvesouris.svg" alt="Bouton programmation pour enfants">
+<a href="ProgrammeEnfant.html">
+  <img src="/assets/icons/chauvesouris.svg" alt="Bouton programmation pour enfants">
+</a>
 <p>Découvrez notre sélection spéciale de films d'Halloween pour enfants ! Plongez dans l'univers magique et amusant 
     de cette fête, avec des films adaptés aux plus jeunes. Cliquez sur la chauve-souris pour explorer la programmation 
     et partager un moment cinéma en famille !</p>
