--- a/FilmMonsieurJack.html
+++ b/FilmMonsieurJack.html
@@ -7,39 +7,41 @@
 </head>
 <body>
     <header>
-        <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-        <img src="/assets/icons/menu.svg" alt="menu-btn">
-        <nav class="headermenu menu" id="mainNav" aria-hidden="true">
-            <ul class="menulist list-unstyled">
-              <li class="menuitem">
-                <a class="menulink" href="billetterie.html"
-                  >Billetterie</a
-                >
-              </li>
-              <li class="menuitem">
-                <a class="menulink" href="ProgrammeAdulte.html">Programmation pour adultes</a>
-              </li>
-              <li class="menuitem">
-                <a class="menulink" href="ProgrammeEnfant.html">Programmation pour enfants</a>
-              </li>
-              <li class="menuitem">
-                <a class="menulink" href="Restauration.html">Restauration</a>
-              </li>
-              <li class="menuitem menuitem--btn">
-                <a class="menu__link" href="Apropos.html">À propos</a>
-              </li>
-              <li class="menuitem menuitem--btn">
-                <a class="menu__link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </nav>
-        
-        <h1>Festiv'Halloween</h1>
-    </header>
+        <a href="index.html">
+          <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+        </a>
+          <img src="/assets/icons/menu.svg" alt="menu-btn">
+          <nav class="headermenu menu" id="mainNav" aria-hidden="true">
+              <ul class="menulist list-unstyled">
+                <li class="menuitem">
+                  <a class="menulink" href="billetterie.html">Billetterie</a>
+                </li>
+                <li class="menuitem">
+                  <a class="menulink" href="ProgrammeAdulte.html">Programmation pour adultes</a>
+                </li>
+                <li class="menuitem">
+                  <a class="menulink" href="ProgrammeEnfant.html">Programmation pour enfants</a>
+                </li>
+                <li class="menuitem">
+                  <a class="menulink" href="Restauration.html">Restauration</a>
+                </li>
+                <li class="menuitem menuitem--btn">
+                  <a class="menu__link" href="Apropos.html">À propos</a>
+                </li>
+                <li class="menuitem menuitem--btn">
+                  <a class="menu__link" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </nav>
+          
+          <h1>Festiv'Halloween</h1>
+      </header>
     <h2>Film pour enfants</h5>
     <img src="/assets/img/Film/filmjack.svg" alt="Film L'étrange noël de Monsieur Jack">
     <h5>L’étrange Noël de Monsieur Jack </h4>
-    <img src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
+    <a href="https://www.youtube.com/watch?v=Oh2CFA88FRY">
+        <img src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
+    </a>
     <p>De 16h00 à 17h16 </p>
     <p>Réalisateur : Henry Selick </p>
     <p>Durée : 1h16 </p>
