Film Famille Addams HTML

--- a/FilmCasper.html
+++ b/FilmCasper.html
@@ -37,7 +37,7 @@
           <h1>Festiv'Halloween</h1>
       </header>
     <h2>Film pour enfants</h5>
-    <img src="/assets/img/Film/filmcasper.webp" alt="Film L'étrange noël de Monsieur Jack">
+    <img src="/assets/img/Film/filmcasper.webp" alt="Film Casper">
     <h5>Casper </h4>
     <a href="https://www.youtube.com/watch?v=jVCe_CtlKwc">
         <img src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
