Film Scooby-Doo HTML

--- a/FilmAddams.html
+++ b/FilmAddams.html
@@ -46,7 +46,7 @@
     <p>Réalisateur : Conrad Vernon et Gerg Tiernan </p>
     <p>Durée : 1h27 </p>
     <p>à partir de 7 - 8 ans </p> 
-    <h3>Biographie du réaalisateur</h3>
+    <h3>Biographie des réalisateurs</h3>
     <p>Conrad Vernon et Greg Tiernan sont deux réalisateurs et animateurs talentueux connus pour leur travail dans 
         le cinéma d'animation.</p>
     <img src="/assets/img/Réalisateur/Conrad Vernon et Gerg Tiernan.jpeg" alt="Photo Conrad Vernon et Gerg Tiernan">
