--- a/FilmCasper.html
+++ b/FilmCasper.html
@@ -46,7 +46,7 @@
     <p>Réalisateur : Brad Silberling </p>
     <p>Durée : 1h36 </p>
     <p>à partir de 6 ans </p> 
-    <h3>Biographie du réaalisateur</h3>
+    <h3>Biographie du réalisateur</h3>
     <img src="/assets/img/Réalisateur/Brad Silberling.jpeg" alt="Photo Brad Silberling">
     <p>Brad Silberling est un réalisateur, scénariste et producteur américain né le 8 septembre 1963 à Washington, 
         D.C. Il est connu pour ses films mêlant sensibilité et imagination, souvent ancrés dans des récits émotionnels. 
