--- a/FilmMonsieurJack.html
+++ b/FilmMonsieurJack.html
@@ -46,7 +46,7 @@
     <p>Réalisateur : Henry Selick </p>
     <p>Durée : 1h16 </p>
     <p>à partir de 6 - 7 ans </p> 
-    <h3>Biographie du réaalisateur</h3>
+    <h3>Biographie du réalisateur</h3>
     <img src="/assets/img/Réalisateur/Henry Selick.jpeg" alt="Photo Henry Selick">
     <p>Henry Selick est un réalisateur, scénariste et animateur américain né le 30 novembre 1952 à Glen Ridge, 
         dans le New Jersey. Spécialisé dans l'animation en stop-motion, il est surtout connu pour avoir réalisé 
