Film Five Nights at Freddy's HTML

--- a/FilmHocusPocus.html
+++ b/FilmHocusPocus.html
@@ -36,9 +36,9 @@
           
           <h1>Festiv'Halloween</h1>
       </header>
-    <h2>Film pour enfants</h5>
+    <h2>Film pour enfants</h2>
     <img src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
-    <h5>Hocus Pocus </h4>
+    <h5>Hocus Pocus </h5>
     <a href="https://www.youtube.com/watch?v=jmXcQv2g6b8">
         <img src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
     </a>
@@ -46,7 +46,7 @@
     <p>Réalisateur : Kenny Ortega </p>
     <p>Durée : 1h36 </p>
     <p>à partir de 9 ans </p> 
-    <h3>Biographie du réaalisateur</h3>
+    <h3>Biographie du réalisateur</h3>
     <img src="/assets/img/Réalisateur/Kenny Ortega.webp" alt="Photo Kenny Ortega">
     <p>Kenny Ortega est un réalisateur, chorégraphe et producteur américain, né le 18 avril 1950 à Palo Alto, Californie. 
         Il a commencé sa carrière artistique à 13 ans et a gagné en notoriété dans les années 80 en chorégraphiant pour des 
