--- a/FilmHorloge.html
+++ b/FilmHorloge.html
@@ -36,9 +36,9 @@
           
           <h1>Festiv'Halloween</h1>
       </header>
-    <h2>Film pour enfants</h5>
+    <h2>Film pour enfants</h2>
     <img src="/assets/img/Film/filmhorloge.jpeg" alt="Film La Prophétie de l’horloge">
-    <h5>La Prophétie de l’horloge</h4>
+    <h5>La Prophétie de l’horloge</h5>
     <a href="https://www.youtube.com/watch?v=woxCesUcyng">
         <img src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
     </a>
@@ -46,7 +46,7 @@
     <p>Réalisateur : Eli Roth </p>
     <p>Durée : 1h40 </p>
     <p>à partir de 11 ans</p> 
-    <h3>Biographie du réaalisateur</h3>
+    <h3>Biographie du réalisateur</h3>
     <img src="/assets/img/Réalisateur/Eli Roth.jpeg" alt="Photo Eli Roth">
     <p>Eli Roth est un réalisateur, scénariste, producteur et acteur américain né le 18 avril 1972 à Boston. Passionné de cinéma 
         d'horreur dès son plus jeune âge, il réalise ses premiers courts-métrages amateurs avec ses frères à l'âge de 11 ans.
