--- a/FilmScooby.html
+++ b/FilmScooby.html
@@ -36,9 +36,9 @@
           
           <h1>Festiv'Halloween</h1>
       </header>
-    <h2>Film pour enfants</h5>
+    <h2>Film pour enfants</h2>
     <img src="/assets/img/Film/filmscooby.jpg" alt="Film Joyeux Halloween Scooby-Doo !">
-    <h5>Joyeux Halloween, Scooby-Doo ! </h4>
+    <h5>Joyeux Halloween, Scooby-Doo ! </h5>
     <a href="https://www.youtube.com/watch?v=XsVdHy52k80">
         <img src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
     </a>
@@ -46,7 +46,7 @@
     <p>Réalisateur : Maxwell Atoms </p>
     <p>Durée : 1h20 </p>
     <p>à partir de 9 ans </p> 
-    <h3>Biographie du réaalisateur</h3>
+    <h3>Biographie du réalisateur</h3>
     <img src="/assets/img/Réalisateur/Maxwell_Atoms.webp" alt="Photo Maxwell Atoms">
     <p>Maxwell Atoms, de son vrai nom Adam Burton, est un réalisateur, scénariste et producteur américain, principalement 
         connu pour son travail dans l’animation. Il est né le 21 janvier 1974 à Albuquerque, Nouveau-Mexique. Diplômé du 
