--- a/FilmShinning.html
+++ b/FilmShinning.html
@@ -36,16 +36,16 @@
           
           <h1>Festiv'Halloween</h1>
       </header>
-    <h2>Film pour adultes</h5>
+    <h2>Film pour adultes</h2>
     <img src="/assets/img/Film/filmshinning.jpg" alt="Film Shinning">
-    <h5>Shinning</h4>
+    <h5>Shinning</h5>
     <a href="https://www.youtube.com/watch?v=JkZzWDaId-s">
         <img src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
     </a>
     <p>De 18h00 à 20h26 </p>
     <p>Réalisateur : Stanley Kubrick </p>
     <p>Durée : 2h26 </p>
-    <h3>Biographie du réaalisateur</h3>
+    <h3>Biographie du réalisateur</h3>
     <img src="/assets/img/Réalisateur/Stanley Kubrick.webp" alt="Photo Stanley Kubrick">
     <p>Stanley Kubrick, né le 26 juillet 1928 à Manhattan (New York) et décédé le 7 mars 1999 en Angleterre, est l'un des réalisateurs les 
         plus influents de l'histoire du cinéma. Kubrick commence sa carrière comme photographe pour le magazine Look à l'âge de 17 ans.
