Film conjuring HTML

--- a/ProgrammeAdulte.html
+++ b/ProgrammeAdulte.html
@@ -69,28 +69,28 @@
     <img src="/assets/img/Film/filmfreddy.webp" alt="Film Les Griffes de la nuit">
 </a>
 <p>Les Griffes de la nuit, de Wes Craven</p>
-<p>Début : 22h10</p>
+<p>Début : 22h25</p>
 <p>Durée : 1h30</p>
 
 <a href="FilmConjuring.html">
     <img src="/assets/img/Film/Filmconjuring.svg" alt="Film Conjuring, les dossiers Warren">
 </a>
-<p>SConjuring, les dossiers Warren, de James Wan</p>
-<p>Début : 23h40</p>
+<p>Conjuring, les dossiers Warren, de James Wan</p>
+<p>Début : 00h00</p>
 <p>Durée : 1h52</p>
 
 <a href="FilmPalaisdurire.html">
     <img src="/assets/img/Film/filmpalaisdurire.jpg" alt="Film Massacre au palais du rire">
 </a>
 <p>Massacre au palais du rire, de Andy Palmer</p>
-<p>Début : 1h30</p>
+<p>Début : 1h55</p>
 <p>Durée : 1h30</p>
 
 <a href="FilmCa.html">
     <img src="/assets/img/Film/filmça.webp" alt="Film Ça">
 </a>
 <p>Ça, de Andy Muschietti</p>
-<p>Début : 3h00</p>
+<p>Début : 3h30</p>
 <p>Durée : 2h12</p>
 
 <footer>
