--- a/FilmFreddy.html
+++ b/FilmFreddy.html
@@ -37,32 +37,30 @@
           <h1>Festiv'Halloween</h1>
       </header>
     <h2>Film pour adultes</h2>
-    <img src="/assets/img/Film/filmshinning.jpg" alt="Film Five Nights at Freddy's">
-    <h5>Five Nights at Freddy's</h5>
-    <a href="https://www.youtube.com/watch?v=e4K9g9a1_is">
+    <img src="/assets/img/Film/filmfreddy.webp" alt="Film Les Griffes de la nuit">
+    <h5>Les Griffes de la nuit</h5>
+    <a href="https://www.youtube.com/watch?v=OuqHdlQ7DBM">
         <img src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
     </a>
-    <p>De 20h30 à 22h20 </p>
-    <p>Réalisateur : Emma Tammi </p>
-    <p>Durée : 1h50 </p>
-    <h3>Biographie de la réalisatrice</h3>
-    <img src="/assets/img/Invite/Emma-Tammi.jpeg" alt="Photo Emma Tammi">
-    <p>Emma Tammi, née le 26 février 1982 à Middletown, Connecticut, est une réalisatrice, productrice et actrice américaine qui s'est 
-        fait un nom dans l'industrie cinématographique, particulièrement dans le genre de l'horreur.
-        Tammi a étudié le cinéma à l'Université de Californie à Los Angeles (UCLA). Avant de se lancer dans la réalisation, elle a travaillé 
-        sur plusieurs productions en tant qu'assistante et productrice, acquérant ainsi une expérience précieuse dans l'industrie.
-        Son premier long-métrage en tant que réalisatrice, "The Wind" (2018), un western d'horreur, a été acclamé par la critique lors de 
-        sa première au Festival international du film de Toronto. Ce film a établi Tammi comme une voix prometteuse dans le cinéma de 
-        genre.</p>
+    <p>De 22h25 à 23h55 </p>
+    <p>Réalisateur : Wes Craven</p>
+    <p>Durée : 1h30 </p>
+    <h3>Biographie du réalisateur</h3>
+    <img src="/assets/img/Réalisateur/Wes craven.webp" alt="Photo Wes Craven">
+    <p>Wes Craven (1939-2015) était un réalisateur américain de films d'horreur révolutionnaire. Ancien professeur de sciences humaines, 
+        il a marqué le cinéma avec des films cultes.
+        Craven a redéfini le genre de l'horreur en introduisant des personnages iconiques comme Freddy Krueger et en réinventant le slasher 
+        movie avec la saga Scream. Il a transformé le cinéma d'horreur en y introduisant de l'humour et de l'auto-dérision.
+        Il est décédé le 30 août 2015 à Los Angeles, laissant derrière lui un héritage cinématographique immense.</p>
     <h3>Résumé du film</h3>
-    <p>L'histoire suit Mike Schmidt, un jeune homme en difficulté qui accepte un poste de gardien de nuit dans l'ancienne pizzeria Freddy 
-        Fazbear’s Pizza. Ce lieu, autrefois populaire, est désormais abandonné, mais ses animatroniques – Freddy Fazbear, Bonnie, Chica et 
-        Foxy – prennent mystérieusement vie après minuit, devenant hostiles. Mike doit survivre à ces nuits cauchemardesques tout en découvrant 
-        le sombre passé de la pizzeria, lié à la disparition d'enfants.</p>
-    <img src="/assets/img/Film/Animaltronix.png" alt="Image Animal Tronix">
-    <p>En parallèle, il veille sur sa jeune sœur Abby, et se retrouve rapidement plongé dans un univers de terreur où les fantômes du passé 
-        refont surface. Le film mélange les frayeurs typiques des jeux avec un mystère autour de la pizzeria, créant une atmosphère oppressante 
-        et pleine de tension alors que Mike tente de comprendre et d'échapper à ces créatures mécaniques meurtrières.</p>
+    <p>Tina Gray, une lycéenne, est victime de rêves effrayants dans lesquels elle est poursuivie par un homme au visage brûlé, portant un gant 
+        muni de lames tranchantes. Elle découvre que ses amis, dont Nancy Thompson, font des cauchemars similaires.
+        Lors d'une nuit fatidique, Tina est sauvagement assassinée dans son sommeil. Nancy réalise alors que le tueur de leurs rêves, Freddy Krueger, 
+        peut affecter la réalité. Ancien tueur d'enfants brûlé vif par les parents du quartier, Krueger est revenu se venger à travers les cauchemars 
+        de leurs enfants.
+        Nancy, déterminée à survivre et à mettre fin au règne de terreur de Freddy, doit lutter contre le sommeil tout en cherchant un moyen de vaincre 
+        ce tueur surnaturel. Alors que ses amis succombent un à un, Nancy comprend qu'elle doit affronter Freddy dans le monde des rêves pour 
+        espérer survivre.</p>
      <footer>
             <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
             <p>Mentions légales</p>
