btn en savoir plus index

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
     <li>Freddy Les Griffes de la Nuit</li>
     <li>Massacre au Palais du rire</li>
 </ul>
+<a href="RobertEnglund.html">
+  <img src="/assets/icons/btn-en-savoir-plus.svg" alt="Bouton en savoir plus">
+</a>
 
 <img src="/assets/img/Invite/Emma-Tammi.jpeg" alt="Photo Emma Tammi">
 <h4>Emma Tammi</h4>
@@ -118,6 +121,9 @@
 <ul>
     <li>Freddy Les Griffes de la Nuit</li>
 </ul>
+<a href="EmmaTammi.html">
+  <img src="/assets/icons/btn-en-savoir-plus.svg" alt="Bouton en savoir plus">
+</a>
 
 <img src="/assets/img/Invite/James_Wan.jpeg" alt="Photo James Wan">
 <h4>James Wan</h4>
@@ -125,6 +131,9 @@
 <ul>
     <li>Conjuring, les dossiers Warren</li>
 </ul>
+<a href="JamesWan.html">
+  <img src="/assets/icons/btn-en-savoir-plus.svg" alt="Bouton en savoir plus">
+</a>
 
 <img src="/assets/img/Invite/Andy_Palmer.jpeg" alt="Photo Andy Palmer">
 <h4>Andy Palmer</h4>
@@ -132,6 +141,9 @@
 <ul>
     <li>Massacre au Palais du rire</li>
 </ul>
+<a href="Andypalmer.html">
+  <img src="/assets/icons/btn-en-savoir-plus.svg" alt="Bouton en savoir plus">
+</a>
 
 <img src="/assets/img/Invite/Andres_Muschietti.jpeg" alt="Photo Andrès Muschietti">
 <h4>Andrès Muschietti</h4>
@@ -139,6 +151,9 @@
 <ul>
     <li>Ça</li>
 </ul>
+<a href="AndresMuschietti.html">
+  <img src="/assets/icons/btn-en-savoir-plus.svg" alt="Bouton en savoir plus">
+</a>
 
 <footer>
     <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
